# CGDS

./: .gitignore  LICENSE  README.md  default.nix  meson.build
docs/: avl.tex
include/: avl_common.h  avl_generic.h  avl_generic_impl.h  generic.h  hashtable_common.h  hashtable_generic.h  hashtable_generic_impl.h  meson.build  vector_common.h  vector_generic.h  vector_generic_impl.h
src/: avl_common.c  avl_generic.c  hashtable_common.c  meson.build  vector_common.c
test/: avl_test.c  hashtable_test.c  meson.build  vector_test.c
