
avl_test_exe = executable('avl_test', 'avl_test.c',
  include_directories : inc_dir,
  link_with : shlib)
test('avl_test', avl_test_exe)

hashtable_test_exe = executable('hashtable_test', 'hashtable_test.c',
  include_directories : inc_dir,
  link_with : shlib)
test('hashtable_test', hashtable_test_exe)

vector_test_exe = executable('vector_test', 'vector_test.c',
  include_directories : inc_dir,
  link_with : shlib)
test('vector_test', vector_test_exe)
